crates/svelte-ratatui-compiler/tests/snapshots/integration__e2e_code_block_has_border.snap
---
source: crates/svelte-ratatui-compiler/tests/integration.rs
expression: out
---
┌──────────────────┐
│let x = 42;       │
└──────────────────┘
