crates/svelte-ratatui-compiler/tests/snapshots/integration__e2e_details_element_closed.snap
---
source: crates/svelte-ratatui-compiler/tests/integration.rs
expression: out
---
┌▶ Toggle me─────────────────┐
│                            │
│                            │
│                            │
└────────────────────────────┘
