crates/svelte-ratatui-compiler/tests/snapshots/integration__e2e_form_with_input_renders.snap
---
source: crates/svelte-ratatui-compiler/tests/integration.rs
expression: out
---
┌text────────────────────────┐
│my text│                    │
│                            │
│                            │
└────────────────────────────┘
