crates/svelte-ratatui-compiler/tests/snapshots/integration__e2e_paragraph_html_renders.snap
---
source: crates/svelte-ratatui-compiler/tests/integration.rs
expression: out
---
Hello from Svelte
