crates/svelte-ratatui-compiler/tests/snapshots/integration__e2e_progress_gauge_renders.snap
---
source: crates/svelte-ratatui-compiler/tests/integration.rs
expression: out
---
┌────────────────────────────┐
│████████████75% █████       │
└────────────────────────────┘
