crates/svelte-ratatui-compiler/tests/snapshots/integration__e2e_styled_svelte_output_renders.snap
---
source: crates/svelte-ratatui-compiler/tests/integration.rs
expression: out
---
Dashboard                     
                              
                              
                              
Welcome to the TUI
