crates/svelte-ratatui-compiler/tests/snapshots/integration__e2e_unordered_list_html_renders.snap
---
source: crates/svelte-ratatui-compiler/tests/integration.rs
expression: out
---
• First item            
• Second item           
• Third item
